--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,11 @@
     <title>reszponzív menü</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">főoldal</a>
+       <a href="gallery.html">Galéria</a>
+       <a href="contact.html">kapcsolatok</a>
+   </nav>
     <h1>kapcsolatok</h1>
 </body>
 </html>
