--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,12 @@
     <title>reszponzív menü</title>
 </head>
 <body>
+    <nav>
+         <a href="index.html">főoldal</a>
+        <a href="gallery.html">Galéria</a>
+        <a href="contact.html">kapcsolatok</a>
+    </nav>
+
     <h1>Galéria</h1>
 </body>
 </html>
