--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>reszponzív menü</title>
 </head>
 <body>
- <h1>Főoldal</h1>   
+    <nav>
+        <a href="index.html">főoldal</a>
+       <a href="gallery.html">Galéria</a>
+       <a href="contact.html">kapcsolatok</a>
+   </nav>
+    <h1>Főoldal</h1>   
 </body>
 </html>
